discussion/kv_engine/173142/173142_rev12_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-50984: Remove num-item-based checkpoint creation

Since Neo we have an implicit upper bound on the max number of
checkpoints (per bucket) that is logically given by (CMQuota /
CheckpointMaxSize).

Still, there are code paths that interfere with that and possibly break
that invariant. One of those is chk_max_items, which triggers checkpoint
creation when the user-defined max num of items has been queued into a
single checkpoint. Here we remove that trigger.

Change-Id: I2c49065a3d1b05493df8ce9865982d6393f9373f

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-04-26 12:50:18.000000000
Message: 
Uploaded patch set 12.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-26 13:12:49.000000000
Message: 
Patch Set 12: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17002/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:2107:5: error: no matching function for call to "checkgtfn" [clang-diagnostic-error]
    checkgt(firstCkptNumItems, 5ull, "");
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_testsuite_common.h:104:5: note: expanded from macro "checkgt"
    checkgtfn(expected, actual, msg, __FILE__, __LINE__)
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_testsuite_common.h:83:13: note: candidate template ignored: deduced conflicting types for parameter "T" ("unsigned long" vs. "unsigned long long")
static void checkgtfn(T exp, T got, const char *msg, const char *file,
            ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17002/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:2107:5:
error: no matching function for call to "checkgtfn" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17002/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6663/ : FAILURE

Compile error at [2022-04-26T12:55:05.151Z] ../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:2107:5:
error: no matching function for call to "checkgtfn"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6663/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17922/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [42/159]: file stats post warmup...../kv_engine/engines/ep/tests/ep_testsuite.cc:2327 Test failed: `" (Expected `376013" to be less than or equal to `368640" - Unexpected fileSize for vbucket)
[2022-04-26T13:02:18.181Z] (258 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17922/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19134/ : FAILURE

Compile error at [2022-04-26T12:57:42.990Z] ../kv_engine/engines/ep/tests/ep_testsuite_common.h:104:56:
error: no matching function for call to ?checkgtfn(uint64_t&, long long unsigned int, const char [1], const char [50], int)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19134/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6756/ : FAILURE

Compile error at [2022-04-26T12:59:58.261Z] ../kv_engine/engines/ep/tests/ep_testsuite_common.h:104:56:
error: no matching function for call to ?checkgtfn(uint64_t&, long long unsigned int, const char [1], const char [50], int)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6756/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19833/ : FAILURE

Compile error at [2022-04-26T12:56:30.502Z] ../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:2107:5:
error: no matching function for call to "checkgtfn"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19833/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18790/ : FAILURE

Compile error at [2022-04-26T12:59:49.263Z] ../kv_engine/engines/ep/tests/ep_testsuite_common.h:104:56:
error: no matching function for call to ?checkgtfn(uint64_t&, long long unsigned int, const char [1], const char [50], int)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18790/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27207/ : FAILURE

Compile error at [2022-04-26T12:58:03.315Z] ../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:2107:5:
error: no matching function for call to "checkgtfn"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27207/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38350/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45655/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15970/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
